syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Messages/SalesArrangement.proto";

message GetSalesArrangementListRequest {
	int64 CaseId = 1;
}

message GetSalesArrangementListResponse {
	repeated SalesArrangement SalesArrangements = 1;
}

